# knowledge-pipeline

./: .env.example  .gitignore  DOCUMENTATION.md  README.md  USER_MANUAL.md  pyproject.toml
knowledge_pipeline/: __init__.py  config.py
knowledge_pipeline/discovery/: __init__.py  parallel_search.py  searxng.py  youtube.py
knowledge_pipeline/orchestration/: __init__.py  cli.py  pipeline.py
knowledge_pipeline/research/: __init__.py  agent.py  openrouter_client.py
knowledge_pipeline/source_code/: __init__.py  github_client.py
knowledge_pipeline/storage/: __init__.py  chunker.py  embeddings.py  qdrant_store.py
scripts/: run_e2e.py
searxng-data/: settings.yml
tests/: conftest.py  smoke_github_client.py  smoke_openrouter_client.py  smoke_parallel_search.py  smoke_pipeline.py  smoke_research_agent.py  smoke_searxng.py  smoke_storage.py  smoke_youtube.py
